added iamge assets and font assets.
added fonts to typography and global, as well as a margin 0 to global

--- a/src/Styles/_global.scss
+++ b/src/Styles/_global.scss
@@ -1,2 +1,8 @@
 @use "./variables" as *;
 @use "./mixins" as *;
+@use "./typography" as *;
+
+body {
+    font-family: Titillium, Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0;
+}
