--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,3 +1,51 @@
 @use "../../Styles/global" as *;
 @use "../../Styles/mixins" as *;
 @use "../../Styles/variables" as *;
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+.header {
+    &__background {
+        text-align: center;
+        background-color: $graphite;
+        padding-top: 1rem;
+        height: 10rem;
+        @include tablet {
+            text-align: left;
+            padding-left: 1rem;
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+
+    &__img {
+        @include tablet {
+            height: 2rem;
+        }
+    }
+    &__categories {
+        display: flex;
+        color: $white;
+        justify-content: center;
+        margin-top: 1rem;
+        @include tablet {
+            margin-top: 0;
+        }
+    }
+    &__links {
+        margin: 0.5rem 2rem;
+
+        &--active {
+            background-color: $instock-black;
+            text-decoration: none !important;
+            border-radius: 5rem;
+            padding: 0.5rem 2rem;
+        }
+        @include tablet {
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+    }
+}
