finish footer and css

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,3 +1,9 @@
 @use "../../Styles/global" as *;
 @use "../../Styles/mixins" as *;
 @use "../../Styles/variables" as *;
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
