--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -14,9 +14,15 @@ a {
         height: 10rem;
         @include tablet {
             text-align: left;
-            padding-left: 1rem;
+            padding-left: 2rem;
+            padding-right: 2rem;
             display: flex;
             justify-content: space-between;
+        }
+
+        @include desktop {
+            padding-left: 10rem;
+            padding-right: 10rem;
         }
     }
 
@@ -32,6 +38,7 @@ a {
         margin-top: 1rem;
         @include tablet {
             margin-top: 0;
+            height: 3rem;
         }
     }
     &__links {
@@ -44,8 +51,6 @@ a {
             padding: 0.5rem 2rem;
         }
         @include tablet {
-            margin-top: 0;
-            margin-bottom: 0;
         }
     }
 }
