--- a/src/Components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/Components/InventoryItemDetails/InventoryItemDetails.scss
@@ -1,3 +1,29 @@
 @use "../../Styles/global" as *;
 @use "../../Styles/mixins" as *;
 @use "../../Styles/variables" as *;
+
+.item-details-container {
+    padding: 1.5rem;
+    box-shadow: 0px 2px 5px 0px rgba(19, 24, 44, 0.1);
+
+    &__title {
+        @include mobileH4;
+        color: $slate;
+        margin: 0;
+    }
+
+    &__body {
+        @include mobileP2;
+        color: $instock-black;
+        margin: 0;
+        padding-bottom: 1rem;
+    }
+}
+
+.rightside {
+    display: flex;
+
+    &__quantity {
+        padding-left: 4rem;
+    }
+}
