started working on the title component

--- a/src/Components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/Components/InventoryItemDetails/InventoryItemDetails.scss
@@ -27,3 +27,17 @@
         padding-left: 4rem;
     }
 }
+
+.title {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid $cloud;
+
+    &__left {
+        display: flex;
+    }
+
+    &__back {
+        padding-right: 1rem;
+    }
+}
