--- a/src/Components/Title/Title.scss
+++ b/src/Components/Title/Title.scss
@@ -1,3 +1,62 @@
 @use "../../Styles/global" as *;
 @use "../../Styles/mixins" as *;
 @use "../../Styles/variables" as *;
+
+.title {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid $cloud;
+    height: 92px;
+
+    &__link {
+        display: flex;
+    }
+
+    &__left {
+        display: flex;
+    }
+
+    &__back {
+        padding-right: 1rem;
+        padding-left: 1.5rem;
+        background: none;
+        border: none;
+        outline: inherit;
+    }
+
+    &__right {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $instock-indigo;
+        border-radius: 50%;
+        border: none;
+        outline: inherit;
+        width: 36px;
+        height: 36px;
+        padding: 0.5rem;
+        margin: 1.5rem;
+
+        @include tablet {
+            width: 100px;
+            border-radius: 20px;
+        }
+
+        &--hidden {
+            display: none;
+            width: 100px;
+
+            @include tablet {
+                display: flex;
+                justify-content: center;
+                @include desktopH4;
+                text-decoration: none;
+                color: $white;
+            }
+        }
+    }
+
+    &__edit > path {
+        fill: $white;
+    }
+}
