--- a/src/Components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/Components/InventoryItemDetails/InventoryItemDetails.scss
@@ -6,6 +6,10 @@
     padding: 1.5rem;
     box-shadow: 0px 2px 5px 0px rgba(19, 24, 44, 0.1);
 
+    @include tablet {
+        display: flex;
+    }
+
     &__title {
         @include mobileH4;
         color: $slate;
@@ -25,5 +29,20 @@
 
     &__quantity {
         padding-left: 4rem;
+    }
+}
+
+.leftside {
+    @include tablet {
+        margin-right: 2rem;
+        padding-right: 2rem;
+        border-right: 1px solid $cloud;
+    }
+}
+
+.test {
+    @include tablet {
+        display: flex;
+        flex-direction: column;
     }
 }
