--- a/src/Components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/Components/InventoryItemDetails/InventoryItemDetails.scss
@@ -14,6 +14,10 @@
         @include mobileH4;
         color: $slate;
         margin: 0;
+
+        @include tablet {
+            @include desktopH4;
+        }
     }
 
     &__body {
@@ -21,6 +25,10 @@
         color: $instock-black;
         margin: 0;
         padding-bottom: 1rem;
+
+        @include tablet {
+            @include desktopP2;
+        }
     }
 }
 
