--- a/src/Pages/InventoryPage/InventoryPage.scss
+++ b/src/Pages/InventoryPage/InventoryPage.scss
@@ -1,3 +1,8 @@
 @use "../../Styles/global" as *;
 @use "../../Styles/mixins" as *;
 @use "../../Styles/variables" as *;
+
+.popup {
+    display: flex;
+    justify-content: center;
+}
