Add title & grid to warehouse list

--- a/src/Pages/Warehouses/Warehouses.scss
+++ b/src/Pages/Warehouses/Warehouses.scss
@@ -1,3 +1,7 @@
 @use "../../Styles/global" as *;
 @use "../../Styles/mixins" as *;
 @use "../../Styles/variables" as *;
+
+.warehouses {
+    @include site-padding;
+}
