--- a/src/Styles/_mixins.scss
+++ b/src/Styles/_mixins.scss
@@ -106,6 +106,19 @@
 ///
 
 ////////////////////////////////////////////////// Other /////////////
+@mixin site-padding {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    @include tablet {
+        padding-left: 2rem;
+        padding-right: 2rem;
+    }
+    @include desktop {
+        padding-left: 10rem;
+        padding-right: 10rem;
+    }
+}
+
 @mixin status {
     &--in-stock {
         font-weight: 600;
