Clean up styles and create main skeleton styles

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -3,7 +3,13 @@
 @use "../../Styles/variables" as *;
 
 .footer {
+    @include mobileP3;
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 2.5rem 0;
+    color: $slate;
+    @include tablet {
+        @include desktopP3;
+    }
 }
