--- a/src/Styles/_mixins.scss
+++ b/src/Styles/_mixins.scss
@@ -28,7 +28,7 @@
 
 // labels, Links & Buttons
 @mixin mobileH3 {
-    font-size: 1.25rem;
+    font-size: 0.8125rem;
     line-height: 1.125rem;
     font-weight: 600;
 }
@@ -103,19 +103,25 @@
     font-weight: 400;
 }
 ////////////////////////////////////////////////// Buttons ///////////
-///
+@mixin button {
+}
 
 ////////////////////////////////////////////////// Other /////////////
-@mixin site-padding {
-    padding-left: 1rem;
-    padding-right: 1rem;
+@mixin main {
+    margin-left: 1rem;
+    margin-right: 1rem;
+    background-color: $white;
+    margin-top: -4rem;
+    box-shadow: 0px 2px 5px 0px rgba($instock-black, 0.1);
+    border-radius: 4px;
     @include tablet {
-        padding-left: 2rem;
-        padding-right: 2rem;
+        margin-left: 2rem;
+        margin-right: 2rem;
+        margin-top: calc(-5.8125rem - 1px);
     }
     @include desktop {
-        padding-left: 10rem;
-        padding-right: 10rem;
+        margin-left: 10rem;
+        margin-right: 10rem;
     }
 }
 
