--- a/src/Components/TitleSearch/TitleSearch.scss
+++ b/src/Components/TitleSearch/TitleSearch.scss
@@ -1,3 +1,63 @@
 @use "../../Styles/global" as *;
 @use "../../Styles/mixins" as *;
 @use "../../Styles/variables" as *;
+
+.title-search {
+    @include main-padding;
+    display: grid;
+    gap: 0.75rem;
+    @include tablet {
+        grid-template-columns: 4fr 3fr 11rem;
+        align-items: center;
+        gap: 1rem;
+        height: 5.8125rem;
+    }
+
+    &__heading {
+        @include mobileH1;
+        @include tablet {
+            @include desktopH1;
+        }
+    }
+    &__label {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        font-size: 0;
+    }
+    &__input {
+        @include mobileP2;
+        border: 1px solid $cloud;
+        height: 2.25rem;
+        padding: 0.3125rem 0.75rem;
+        border-radius: 20px;
+        @include tablet {
+            @include desktopP2;
+        }
+        &:focus,
+        &:focus-visible {
+            outline: none;
+            border: 1px solid $instock-indigo;
+        }
+        &::placeholder {
+            color: $slate;
+        }
+    }
+    &__icon {
+        position: absolute;
+        bottom: 0.33rem;
+        right: 0.75rem;
+        max-width: 24px;
+    }
+    &__button {
+        @include mobileH3;
+        width: 100%;
+        height: 2.25rem;
+        border-radius: 20px;
+        background-color: $instock-indigo;
+        color: $white;
+        @include tablet {
+            @include desktopH3;
+        }
+    }
+}
