Fix layout for inventory item details responsiveness

--- a/src/Components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/Components/InventoryItemDetails/InventoryItemDetails.scss
@@ -43,6 +43,7 @@
 
 .leftside {
     @include tablet {
+        width: 50%;
         margin-right: 2rem;
         padding-right: 2rem;
         border-right: 1px solid $cloud;
