Add auto-stock styling to item details component

--- a/src/Components/InventoryItemDetails/InventoryItemDetails.scss
+++ b/src/Components/InventoryItemDetails/InventoryItemDetails.scss
@@ -23,6 +23,7 @@
 
     &__body {
         @include mobileP2;
+        @include status;
         color: $instock-black;
         margin: 0;
         padding-bottom: 1rem;
