--- a/src/Components/WarehouseAdd/WarehouseAdd.scss
+++ b/src/Components/WarehouseAdd/WarehouseAdd.scss
@@ -1,7 +1,6 @@
 @use "../../Styles/global" as *;
 @use "../../Styles/mixins" as *;
 @use "../../Styles/variables" as *;
-@use "../../styles/typography" as *;
 
 .addwhcard {
     border: solid 1px white;
@@ -25,7 +24,7 @@
     }
 
     &__wrp-header {
-        @include m-h1;
+        @include mobileH1;
         display: flex;
         gap: 1rem;
         border-bottom: solid 1px $cloud;
@@ -71,7 +70,7 @@
     }
 
     &__sub-header {
-        @include m-h2;
+        @include mobileH2;
         padding-bottom: 0.5rem;
 
         @include tablet {
@@ -84,7 +83,7 @@
     }
 
     &__label {
-        @include m-h3;
+        @include mobileH3;
         display: flex;
         flex-direction: column;
         padding-top: 1rem;
@@ -119,7 +118,7 @@
     }
 
     &__error-text {
-        @include m-p3;
+        @include mobileP3;
         font-weight: 100;
         color: #c94515;
     }
