--- a/src/Components/WarehouseDetails/WarehouseDetails.scss
+++ b/src/Components/WarehouseDetails/WarehouseDetails.scss
@@ -8,7 +8,6 @@
 
     @include tablet {
         display: flex;
-        justify-content: space-between;
     }
 
     &__address-container {
@@ -58,7 +57,8 @@
     flex-direction: row;
     justify-content: space-between;
     @include tablet {
-        padding-right: 5rem;
+        justify-content: flex-start;
+        flex-grow: 1;
     }
     &__body {
         &--padding {
@@ -68,9 +68,7 @@
     }
     &__contact-name {
         @include tablet {
-            // border-left: 1px solid $cloud;
-            // padding-left: 3rem;
-            padding-right: 3rem;
+            width: 50%;
         }
     }
 }
