--- a/src/Components/WarehouseDetails/WarehouseDetails.scss
+++ b/src/Components/WarehouseDetails/WarehouseDetails.scss
@@ -55,7 +55,6 @@
 .contact-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     @include tablet {
         justify-content: flex-start;
         flex-grow: 1;
@@ -67,8 +66,6 @@
         }
     }
     &__contact-name {
-        @include tablet {
-            width: 50%;
-        }
+        width: calc(50% + 0.5rem);
     }
 }
