--- a/src/Components/WarehouseAdd/WarehouseAdd.scss
+++ b/src/Components/WarehouseAdd/WarehouseAdd.scss
@@ -2,70 +2,26 @@
 @use "../../Styles/mixins" as *;
 @use "../../Styles/variables" as *;
 
-.addwhcard {
-    border: solid 1px white;
-    border-radius: 4px;
-    position: relative;
-    bottom: 4.0625rem;
-    bottom: 50px;
-    background-color: white;
-    margin: 0rem 2rem;
-    box-shadow: 0px 0.125rem 0.3125rem rgb(19 24 44 / 10%);
-
-    @include tablet {
-        margin-right: 2rem;
-        margin-left: 2rem;
-        bottom: 70px;
-    }
-
-    @include desktop {
-        margin-right: 3rem;
-        margin-left: 3rem;
-    }
-
-    &__wrp-header {
-        @include mobileH1;
-        display: flex;
-        gap: 1rem;
-        border-bottom: solid 1px $cloud;
-        padding-bottom: 1rem;
-        padding: 1rem;
-
-        @include tablet {
-            padding: 2rem 0 1.3125rem 2.25rem;
-        }
-
-        @include desktop {
-            padding-left: 2.75rem;
-        }
-    }
-
+.whcard {
     &__content-wrp {
+        @include main-padding;
+        border-top: 1px solid $cloud;
         @include tablet {
             display: flex;
             width: 100%;
-            padding-right: 1rem;
-            padding-left: 1rem;
-            margin-top: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        @include desktop {
-            padding-left: 1.75rem;
-            padding-right: 1.75rem;
         }
     }
 
     &__details-wrp {
-        padding: 1.5rem 1rem 1.5rem 1rem;
         display: flex;
         flex-direction: column;
+        padding-bottom: 1rem;
 
         @include tablet {
             width: 50%;
+            padding-top: 1rem;
             padding-right: 2rem;
             border-right: solid 1px $cloud;
-            padding-top: 1rem;
         }
     }
 
@@ -74,11 +30,7 @@
         padding-bottom: 0.5rem;
 
         @include tablet {
-            padding-bottom: 1rem;
-        }
-
-        @include desktop {
-            padding-bottom: 1rem;
+            @include desktopH2;
         }
     }
 
@@ -87,29 +39,24 @@
         display: flex;
         flex-direction: column;
         padding-top: 1rem;
-        height: 5rem;
+        height: 5.25rem;
 
-        @include desktop {
-            height: 6rem;
+        @include tablet {
+            @include desktopH3;
         }
     }
 
     &__input {
-        border: 1px solid #bdc5d5;
-        border-radius: 20px;
-        height: 2.25rem;
-        padding-left: 1rem;
+        @include field;
+        margin-top: 4px;
     }
 
     &__error-wrp {
-        display: none;
-
-        @include desktop {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            height: 1.5rem;
-        }
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        padding-top: 2px;
+        height: 1.5rem;
     }
 
     &__error-img {
@@ -120,15 +67,17 @@
     &__error-text {
         @include mobileP3;
         font-weight: 100;
-        color: #c94515;
+        color: $red;
+        @include tablet {
+            @include desktopP3;
+        }
     }
 
     &__contact-wrp {
         display: flex;
         flex-direction: column;
         border-top: solid 1px $cloud;
-        padding: 1rem 1rem 0 1rem;
-        margin-bottom: 1rem;
+        padding-top: 1rem;
 
         @include tablet {
             width: 50%;
@@ -138,8 +87,7 @@
     }
 
     &__btns-wrp {
-        padding-top: 1.5rem;
-        padding-bottom: 1.5rem;
+        @include main-padding;
         background-color: #f7f8f9;
         display: flex;
         justify-content: center;
@@ -147,9 +95,23 @@
         border-radius: 0px 0px 3px 3px;
 
         @include tablet {
-            display: flex;
             justify-content: flex-end;
-            padding-right: 1rem;
+        }
+    }
+
+    &__cancel {
+        @include button("secondary");
+        width: 100%;
+        @include tablet {
+            width: auto;
+        }
+    }
+
+    &__add {
+        @include button("primary");
+        width: 100%;
+        @include tablet {
+            width: auto;
         }
     }
 }
