--- a/src/Components/InventoryItemDelete/InventoryItemDelete.scss
+++ b/src/Components/InventoryItemDelete/InventoryItemDelete.scss
@@ -41,24 +41,38 @@
     }
 }
 
-.delete-button {
+.inv-delete-button {
     display: flex;
     justify-content: center;
+    gap: 1rem;
+    margin-bottom: 4rem;
+
+    @include tablet {
+        margin-bottom: 0;
+    }
+
+    &__link {
+        flex-grow: 1;
+        @include tablet {
+            flex-grow: 0;
+        }
+    }
 
     &__cancel {
-        border-radius: 20px;
-        border: 1px solid $cloud;
-        background: $white;
-        color: $slate;
-        padding: 0.5rem 4rem 0.5rem 4rem;
-        margin-right: 0.5rem;
+        @include button("secondary");
+        width: 100%;
+        @include tablet {
+            width: auto;
+            padding: 0 4rem;
+        }
     }
 
     &__delete {
-        border-radius: 20px;
-        background-color: $red;
-        color: $white;
-        padding: 0.5rem 4rem 0.5rem 4rem;
-        margin-left: 0.5rem;
+        @include button("delete");
+        width: 100%;
+        @include tablet {
+            width: auto;
+            padding: 0 4rem;
+        }
     }
 }
